samples/_failures_safe/1761192767_8019db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d226defa.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_d226defa.c:164:23: error: expected ‘)’ at end of input
  164 |     if (!queue_enqueue
      |        ~              ^
      |                       )
./samples/SAFE/__tmp_d226defa.c:164:5: error: expected declaration or statement at end of input
  164 |     if (!queue_enqueue
      |     ^~
